Fixed issue: A11y for messagebox and focused links (#4507)
* fix Visual heading not announced as a heading

* fix Focus indicator is not visible on the link
---------

--- a/themes/admin/Sea_Green/css/sea_green.css
+++ b/themes/admin/Sea_Green/css/sea_green.css
@@ -17581,6 +17581,9 @@ a {
   color: #14AE5C;
   font-weight: 500;
 }
+a:focus {
+  outline: 2px solid currentColor !important;
+}
 
 .has-link {
   cursor: pointer;
